--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -21,3 +21,54 @@
   position: initial;
   margin: 0.75em 1em;
 }
+
+.card__description {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5em;
+}
+
+.card_buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons {
+  display: flex;
+}
+
+.card {
+  background: var(--branco);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.description__title {
+  color: var(--laranja);
+  font-weight: 700;
+}
+
+.description__title_book {
+  color: var(--azul);
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0.5em 0;
+}
+
+.description__text {
+  font-size: 14px;
+}
+
+.buttons__item {
+  margin: 0 0.5em;
+}
+
+.button_archor {
+  background-color: var(--laranja);
+  color: var(--branco);
+  font-weight: 700;
+  text-decoration: none;
+  padding: 1em 2.23em;
+}
