--- a/styles/banner.css
+++ b/styles/banner.css
@@ -32,3 +32,19 @@
   color: var(--branco);
   background: url('../assets/Pesquisa.svg') no-repeat;
 }
+
+@media screen and (min-width: 1024px) {
+
+  .banner__titulo {
+    font-size: 36px;
+  }
+
+  .banner__pesquisa {
+    width: 50%;
+  }
+
+  .banner__pesquisa::placeholder {
+    background-position: 8em;
+  }
+
+}
