--- a/styles/header.css
+++ b/styles/header.css
@@ -54,6 +54,50 @@
   font-weight: 700;
 }
 
-.container__botao {
+.opcoes,                   
+.opcoes__botao,
+.container__titulo {
   display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .container__titulo
+  .container__alura--negrito {
+    font-size: 30px;
+    font-family: var(--fonte-secundaria);
+  }
+  
+  .container__titulo {
+    display: block;
+    font-weight: 400;
+  }
+
+  .container__alura--negrito {
+    font-weight: 700;
+  }
+
+  .opcoes {
+    display: flex;
+  }
+
+  .opcoes__item {
+    padding: 0 1em;
+    text-transform: uppercase;
+  }
+
+  .opcoes__item_link {
+    text-decoration: none;
+    color: var(--preto);
+  }
+
+  .cabecalho__menu-hamburguer,
+  .container__image-transaparente {
+    display: none;
+  }
+
+
+  .opcoes__botao:checked~.lista-menu {
+    display: block;
+    width: auto;
+  }
 }
