--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
 @import url('./header.css');
 @import url('./banner.css');
 @import url('./carrossel.css');
+@import url('./topicos.css');
+@import url('./contact.css');
+@import url('./footer.css');
 
 :root {
   --cor-de-fundo: #EBECEE;
@@ -8,7 +11,9 @@
   --laranja: #EB9800;
   --azul-degrade: linear-gradient(97.45deg, #002F52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins";
-  --azul: #002F52
+  --azul: #002F52;
+  --fonte-secundaria: "Josefin Sans";
+  --preto: #000000
 }
 
 body {
