--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,7 +2,43 @@ hr {
   margin: 0;
 }
 
-.footer_title {
+.footer {
   background-color: var(--branco);
   padding: 1em;
+}
+
+.footer__list {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer_title {
+    font-size: 24px;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .footer__list {
+    display: block;
+  }
+
+  .footer__list__titulo {
+    font-size: 14px;
+    color: #858585;
+  }
+
+  .footer__list__item {
+    display: flex;
+    align-items: center;
+    margin: 0.6em 0;
+  }
+
+  .footer__list_item_link {
+    text-decoration: none;
+    color: var(--color-visited-link);
+    margin-left: 0.6em;
+  }
 }
