--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -97,3 +97,36 @@
     margin: 2em auto;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .carrossel__container {
+    display: flex;
+    margin: 0 20vw 3em 20vw;
+    align-items: center;
+  }
+
+  .swiper-pagination {
+    margin: 1em 0;
+  }
+
+  .swiper {
+    width: 50%;
+  }
+
+  .description__title {
+    font-size: 32px;
+  }
+
+  .description__text {
+    font-size: 16px;
+  }
+
+  .description {
+    margin-right: 1em;
+  }
+
+  .card {
+    width: 60%;
+    margin-left: 3em;
+  }
+}
