--- a/styles/footer.css
+++ b/styles/footer.css
@@ -42,3 +42,14 @@ hr {
     margin-left: 0.6em;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .footer__list {
+    border-left: 1px solid #858585;
+    padding-left: 1em;
+  }
+  
+  .footer {
+    padding: 3em;
+  }
+}
