--- a/styles/contact.css
+++ b/styles/contact.css
@@ -32,7 +32,7 @@
 .contact__email::placeholder {
   font-family: var(--fonte-principal);
   color: var(--azul);
-  background: url('../assets/Pesquisa.svg') no-repeat;
+  background: url('../assets/icons/Pesquisa.svg') no-repeat;
   padding-left: 2em;
 }
 
